issue #30 - team, teams page

--- a/src/App.css
+++ b/src/App.css
@@ -16,122 +16,122 @@
     transform: scale(0.7);
 }
 /* NBA LOGOS */
-.sprite-76ers {
+.PHI {
     background-position: -5px -5px
 }
 
-.sprite-bucks {
+.MIL {
     background-position: -315px -5px
 }
 
-.sprite-bulls {
+.CHI {
     background-position: -625px -5px
 }
 
-.sprite-cavaliers {
+.CLE {
     background-position: -935px -5px
 }
 
-.sprite-celtics {
+.BOS {
     background-position: -1245px -5px
 }
 
-.sprite-clippers {
+.LAC {
     background-position: -5px -315px
 }
 
-.sprite-grizzlies {
+.MEM {
     background-position: -315px -315px
 }
 
-.sprite-hawks {
+.ATL {
     background-position: -625px -315px
 }
 
-.sprite-heat {
+.MIA {
     background-position: -935px -315px
 }
 
-.sprite-hornets {
+.CHA {
     background-position: -1245px -315px
 }
 
-.sprite-jazz {
+.UTA {
     background-position: -5px -625px
 }
 
-.sprite-kings {
+.SAC {
     background-position: -315px -625px
 }
 
-.sprite-knicks {
+.NYK {
     background-position: -625px -625px
 }
 
-.sprite-lakers {
+.LAL {
     background-position: -935px -625px
 }
 
-.sprite-magic {
+.ORL {
     background-position: -1245px -625px
 }
 
-.sprite-mavericks {
+.DAL {
     background-position: -5px -935px
 }
 
-.sprite-nets {
+.BKN {
     background-position: -315px -935px
 }
 
-.sprite-nuggets {
+.DEN {
     background-position: -625px -935px
 }
 
-.sprite-pacers {
+.IND {
     background-position: -935px -935px
 }
 
-.sprite-pelicans {
+.NOP {
     background-position: -1245px -935px
 }
 
-.sprite-pistons {
+.DET {
     background-position: -5px -1245px
 }
 
-.sprite-raptors {
+.TOR {
     background-position: -315px -1245px
 }
 
-.sprite-rockets {
+.HOU {
     background-position: -625px -1245px
 }
 
-.sprite-spurs {
+.SAS {
     background-position: -935px -1245px
 }
 
-.sprite-suns {
+.PHX {
     background-position: -1245px -1245px
 }
 
-.sprite-thunder {
+.OKC {
     background-position: -1555px -5px
 }
 
-.sprite-timberwolves {
+.MIN {
     background-position: -1555px -315px
 }
 
-.sprite-trail-blazers {
+.POR {
     background-position: -1555px -625px
 }
 
-.sprite-warriors {
+.GSW {
     background-position: -1555px -935px
 }
 
-.sprite-wizards {
+.WAS {
     background-position: -1555px -1245px
 }
